# dust-mechanica

./: .env.example  .gitignore  Dockerfile.api  Dockerfile.worker  README.md  pyproject.toml
apps/api/: README.md  deps.py  main.py  settings.py
apps/web/: README.md
apps/worker/: README.md  runner.py
docs/: ai-system-design.md  benchmark-spec.md  demo-week1.md  open-source-toolchain.md  recalibration-workflow.md  release-v0.1-checklist.md  review-package-workflow.md  runbook-local.md  runbook-production-minimal.md  topology-plugin-guide.md  troubleshooting.md  v1-contract.md  week2-architecture.md  week6-pilot.md
docs/architecture/: v1-contract.md  (+4 more)
examples/: sample_request_linear_axis.json
scripts/: export_physics_compare.py
tests/: test_api_endpoints.py  test_artifact_store.py  test_cad_adapter_contract.py  test_cadquery_runner.py  test_calibration_harness.py  test_decision_scoring.py  test_design_review_package_api.py  test_drivetrain_checks.py  test_generation_pipeline.py  test_golden_tradeoffs.py  test_jobs_api.py  test_open_source_toolchain_adapter.py  test_optional_toolchain_runners.py  test_persistence.py  test_physics_compare_export.py  test_recalibration.py  test_report_endpoint.py  test_review_workflow.py  test_scoring_explainability.py  test_sensitivity.py  test_simulation_adapter.py  test_sourcing_rules.py  test_structural_checks.py  test_telemetry_drift.py  test_telemetry_slices.py  test_thermal_model.py  test_toolchain_run_endpoint.py  test_topology_selection.py  test_units.py  test_validation.py  test_week6_feedback.py  test_worker_pipeline.py
(+34 files in other folders)
