[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dust-mechanica"
version = "0.1.0"
description = "Week1 monorepo slice for belt-driven linear axis"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "pydantic>=2.8",
  "pytest>=8.0",
  "httpx>=0.27",
  "PyYAML>=6.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["apps*", "packages*"]
